# fillit

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: fillit.h
lib/: Makefile
libft/: Makefile
src/: fillit.c  fillit.h  parse.c  solve.c  validate.c
